output/VERSION_X86/Build_x86.log
"Target_x86" 
06.01.2019  9:15:37,96 
"preprocess it" 
"create assembly listings" 
"compile it" 
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_start_init_sw.c: In function 'OS_INIT_SW':
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_start_init_sw.c:8:20: error: expected expression before '{' token
    OS_SW_BUG[15] = {os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug};
                    ^
"assemble it" 
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_start_init_sw.c: In function 'OS_INIT_SW':
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_start_init_sw.c:8:20: error: expected expression before '{' token
    OS_SW_BUG[15] = {os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug};
                    ^
"link it" 
mingw32-g++.exe: error: E:\NeuOrga\Programmieren\c_cpp\github_os\output\os_base\obj_x86\os_start_init_sw.o: No such file or directory
